# qdrant-batch-proxy

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  embed.lua
src/: api_embed.rs  api_embed_batch.rs  api_healhtz.rs  batch_engine.rs  main.rs
