[package]
name = "qdrant-batch-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
dotenvy = "0.15.7"
fake = "4.4.0"
http = "1.3.1"
mime = "0.3.17"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
simd-json = "0.15.1"
tako-rs = { version = "0.3.2", features = ["simd", "jemalloc"] }
fastembed = { version = "5.0.2", default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"

[features]
simd = []
